Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60790

Dragging images to desktop does not work

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.2
    • 5.9.0 Beta 4
    • WebEngine
    • None
    • all platforms
    • 99f84ffd2c0c78014a24534a863aa1c755abd51c

    Description

      From the test wiki: Visit https://www.w3schools.com/html/html5_draganddrop.asp Grab the w3schools logo image and drag it to your desktop or OS file browser window. Check that the image is saved.

      On Windows 10 the image is never accepted on the desktop / file browser.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jbornema Joerg Bornemann
              jbornema Joerg Bornemann
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes